# GIC-2-DOE

./: LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt  requirements_cpu.txt
configs/: ieee14_demo.yaml  ieee30_benchmark.yaml  rtsgmlc_scale.yaml
docs/: architecture.md  usage.md
examples/: run_ieee14_demo.py
notebooks/: proof_of_concept.ipynb
qGridX.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qgridx/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  registry.py
qgridx/baselines/: __init__.py  milp_misocp.py
qgridx/encoding/: __init__.py  base.py  log_binary_sizing.py
qgridx/experiment/: __init__.py  metrics.py  plots.py  runner.py
qgridx/model/: __init__.py  decoder_transformer.py  dpo.py  encoder_gnn.py  tokenizer.py
qgridx/problems/: __init__.py  base.py  ising.py  power_system.py  scenarios.py
qgridx/projection/: __init__.py  base.py  confidence_ilp.py  local_search.py
qgridx/quantum/: __init__.py  ansatz.py  backend.py  base.py  gqe_master.py  pce.py  readout.py
qgridx/subproblem/: __init__.py  base.py  cuts.py  scopf.py
qgridx/utils/: __init__.py  io.py  logging.py  seeding.py
tests/: conftest.py  test_backend.py  test_baseline.py  test_ising.py  test_pce.py  test_pipeline_smoke.py  test_projection.py  test_schema.py
